Fixed Bay Bash height on iPhone 6

--- a/styles/mobile.less
+++ b/styles/mobile.less
@@ -43,7 +43,7 @@
 
   .bay-bash {
     min-height:55vh;
-    height:500px;
+    height:550px;
   }
 
  .bay-bash .icon-BB {
